Added to portfolio section

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -56,6 +56,10 @@ body {
     margin-right: 20px;
 }
 
+#friendImg, #reactImg {
+    margin-bottom: 35px;
+}
+
 ul {
     list-style-position: inside;
 }
