Changed react app description

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -56,8 +56,12 @@ body {
     margin-right: 20px;
 }
 
-#friendImg, #reactImg {
+#friendImg {
     margin-bottom: 35px;
+}
+
+#reactImg {
+    margin-bottom: 60px;
 }
 
 ul {
