Updated jumbotron image

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -22,7 +22,7 @@ body {
     height: 500px;
     margin-top: 70px;
     text-align:center;
-    background: #000 url("../images/jumboMod.jpg") no-repeat center center;
+    background: #000 url("../images/jumboSmall.jpg") no-repeat center center;
     background-size: 100% 100%;
     -moz-background-size: 100% 100%;
     -webkit-background-size: 100% 100%;
